app/sass/sections/header/main.sass
// Styles for everything in the header

$header-section-background: #2196f3

@import laptop


#header-wrapper
  color: $light-text-primary

  h1
    // h1 is outside of header because header jumps around during animation and
    // moving text makes that more obvious.

    margin: 0

    position: fixed
    top: 50vh
    left: 50vw
    width: 60vw
    transform: translate(-50%, -50%)

    z-index: 101

    text-align: center
    // Since letter-spacing adds space after the last character in a line and
       messes up text-align: center, I add equal space to the left side in order
       to achieve balance.
    letter-spacing: .5em
    padding-left: 2vw
    line-height: 150%

    animation: fade-in 2s ease-in-out



  header
    height: 100vh
    width: 100vw
    position: relative
    background-color: $background-blue-darker

    position: fixed
    left: 50vw
    top: 50vh
    transform: translate(-50%, -50%)

    z-index: 100


    canvas
      position: absolute
      top: 0
      left: 0
      width: 100%
      height: 100%


    // Scroll indicator
    .down-indicator

      display: inline-block
      width: 100%
      position: absolute
      bottom: 0

      text-align: center

      i
        display: block
        animation: 1s bounce infinite 4s, fade-in 2s ease-in-out 2s
        animation-fill-mode: forwards
        cursor: default
        font-size: 30px
        user-select: none
        -webkit-touch-callout: none
        opacity: 0


@keyframes fade-in
  from
    opacity: 0

  to
    opacity: 1


@keyframes bounce
  0%
    transform: translateY(0)

  50%
    transform: translateY(-40%)

  100%
    transform: translateY(0)


#header-bg
  // Height is overriden here because the top 50vh is just blank space
     through which the user scrolls during the animation.
  height: 150vh
  background-color: $header-section-background

